<resources>
    <string name="app_name">WitQuiz</string>
    <string name="start">START</string>
    <string name="username_hint">Nazwa użytkownika</string>
    <string name="set_username">Wpisz nazwę użytkownika</string>
    <string name="title_activity_menu">Menu</string>
    <string name="new_game">Nowa gra</string>
    <string name="best_scores">Najlepsze wyniki</string>
    <string name="creator">Kreator</string>
    <string name="exit">Wyjdź</string>
    <string name="edit_category">Edytuj kategorię</string>
    <string name="add_new_category">Dodaj nową kategorię</string>
    <string name="next">Dalej</string>
    <string name="category_name_exists">Kategoria o tej nazwie już istnieje</string>
    <string name="category_name_cannot_be_empty">Nazwa kategorii nie może byc pusta</string>
    <string name="do_you_want_to_delete_question">Czy na pewno chcesz usunąć to pytanie?</string>
    <string name="no_categories_to_edit">Brak kategorii do edycji</string>
    <string name="category_name">Nazwa kategorii</string>
    <string name="category">Kategoria</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="add_new_question">Dodaj nowe</string>
    <string name="questions">Pytania</string>
    <string name="question">Pytanie</string>
    <string name="save_question">Zapisz pytanie</string>
    <string name="delete_question">Usuń pytanie</string>
    <string name="OK">OK</string>
    <string name="no">Nie</string>
    <string name="start_game">Rozpocznij grę</string>
    <string name="no_categories_to_choose">Brak kategorii do wyboru. Dodaj nową kategorię.</string>
    <string name="choose_category">Wybierz kategorię</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="question_nr">Pytanie nr %d</string>
    <string name="confirm">Zatwierdź</string>
    <string name="username">Użytkownik: %s</string>

    <array name="answers_array">
        <item>A) %s</item>
        <item>B) %s</item>
        <item>C) %s</item>
        <item>D) %s</item>
    </array>

    <string name="end_of_game">Koniec gry</string>
    <string name="won">WYGRAŁEŚ</string>
    <string name="lost">PRZEGRAŁEŚ</string>
    <string name="game_end">%s! \n Aby rozpocząć nową grę, naciśnij OK.</string>
    <string name="game_summary">Statystyka</string>
    <string name="questions_answered">Pytań zaliczonych: %d</string>
    <string name="questions_left">Pytań do końca: %d</string>
    <string name="number">Nr</string>
    <string name="username_header">Użytkownik</string>
    <string name="score">Wynik</string>

</resources>
