<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/game_summary"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/answered_questions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_answered"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/questions_left_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
