<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.witquiz.activities.CreatorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioGroup
            android:id="@+id/category_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_category"
                android:id="@+id/edit_category_radioButton"
                android:checked="true" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category_spinner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_category"
                android:id="@+id/new_category_radioButton" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_category_editText"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/category_name"
                android:inputType="textCapSentences"/>


        </RadioGroup>
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/creator_next_button"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
