<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.witquiz.fragments.GameFragment">

    <TextView
        android:id="@+id/username_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/question_top_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/category_name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/question_number_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right"
            android:text="@string/question_nr"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/central_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/question_button_selector"
            android:minLines="7"
            android:padding="5dp"
            android:text="Pytanie"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ToggleButton
                    android:id="@+id/a_answer_button"
                    style="@style/question_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:minLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textOff="odp a"
                    android:textOn="odp a" />

                <ToggleButton
                    android:id="@+id/b_answer_button"
                    style="@style/question_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:minLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textOff="odp b"
                    android:textOn="odp b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ToggleButton
                    android:id="@+id/c_answer_button"
                    style="@style/question_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:minLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textOff="odp c"
                    android:textOn="odp c" />

                <ToggleButton
                    android:id="@+id/d_answer_button"
                    style="@style/question_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:minLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textOff="odp d"
                    android:textOn="odp d" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>

</LinearLayout>
